include product details + images when retrieving cart
