# types/cart.go
@@ -6,7 +6,7 @@ type Cart struct {
 }
 
 type CartItem struct {
-	ProductID string `json:"product_id"`
-	Quantity  int    `json:"quantity"`
-	UnitPrice int64  `json:"unit_price"`
+	Product   Product `json:"product"`
+	Quantity  int     `json:"quantity"`
+	UnitPrice int64   `json:"unit_price"`
 }
